# VITMMA19

./: .gitignore  Dockerfile  README.md  bayesian_optim_transformer_VITMMA19_10.json  bayesian_optim_transformer_VITMMA19_77.json  hpo.sh  lables.json  pyproject.toml  requirements.txt  run.sh  training_log.txt  training_output.txt
data/: X.npy  X_seq.npy  X_test.npy  X_train.npy  X_val.npy  Y.npy  Y_seq.npy  Y_seq_balanced.npy  Y_test.npy  Y_train.npy  Y_val.npy  augment_data.py  cleaned_labels.json  cleaned_labels_merged.json  data.py  extract_segments.py  label_parser.py  label_verifier.py  label_verifier_mpl.py  lables.json  metadata.json  metadata_seq.json  metadata_seq_balanced.json  metadata_splits.json  potential.json  scaler.pkl  segment_analysis.py  segment_extractor.py  train_baseline_model.py  train_test_split.py  window_size_selection.py
docs/: requirements.md
log/: comparison_results_20251214_195451.json  comparison_results_20251214_222951.json  comparison_results_20251214_223303.json  comparison_results_20251214_223336.json  comparison_results_20251214_223649.json  comparison_results_20251214_223650.json
models/: __init__.py  base.py  bayesian_optim_20251214_155953.json  bayesian_optim_20251214_163419.json  best_model.pth  comparison_results_20251214_101745.json  comparison_results_20251214_101826.json  comparison_results_20251214_124602.json  comparison_results_20251214_124633.json  hierarchical_bayesian_20251214_174302.json  hp_comparison_20251214_151829.json  hp_comparison_20251214_153114.json  hp_comparison_20251214_153154.json  (+3 more)
src/: config.py  (+17 more)
(+138 files in other folders)
