[project]
name = "vitmma19"
version = "0.1.0"
description = "Bull/Bear Flag Pattern Detector - Deep learning system for financial time series pattern recognition"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "textual>=6.8.0",
    "torch>=2.9.1",
]

[project.scripts]
bullflag = "main:main"
bullflag-export-labelstudio = "bullflag_detector.export_labelstudio:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
